<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SignupActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etname"
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/etMobileNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:background="@drawable/otp_validation"
        android:hint="@string/name"
        android:textColorHint="@color/white"
        android:gravity="center_vertical"
        android:paddingStart="25dp"
        android:paddingEnd="0dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-light"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etMobileNumber"
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/etCollegeName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:background="@drawable/otp_validation"
        android:hint="@string/mobile_number"
        android:textColorHint="@color/white"
        android:gravity="center_vertical"
        android:paddingStart="25dp"
        android:paddingEnd="0dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-light"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCollegeName"
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:background="@drawable/otp_validation"
        android:hint="@string/college_name"
        android:textColorHint="@color/white"
        android:gravity="center_vertical"
        android:paddingStart="25dp"
        android:paddingEnd="0dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-light"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/RadioBt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:hint="@string/email"
        android:background="@drawable/otp_validation"
        android:textColorHint="@color/white"
        android:gravity="center_vertical"
        android:paddingStart="25dp"
        android:paddingEnd="0dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-light"
        />
    <RadioGroup
        android:id="@+id/RadioBt"
        android:orientation="horizontal"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_margin="10dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etCreatePassword">
        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="116dp"
            android:layout_height="50dp"
            android:background="@drawable/radio_selector"
            android:text="@string/student"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed-light"
            android:textStyle="bold"
            android:layout_margin="5dp"
            />
        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="116dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:text="@string/driver"
            android:fontFamily="sans-serif-condensed-light"
            android:textStyle="bold"
            android:background="@drawable/radio_selector"
            android:textColor="@color/white"
            />
    </RadioGroup>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCreatePassword"
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/etReEnterPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:hint="@string/create_password"
        android:background="@drawable/otp_validation"
        android:textColorHint="@color/white"
        android:gravity="center_vertical"
        android:paddingStart="25dp"
        android:paddingEnd="0dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-light"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etReEnterPassword"
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/btSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:hint="@string/re_enter_password"
        android:background="@drawable/otp_validation"
        android:textColorHint="@color/white"
        android:gravity="center_vertical"
        android:paddingStart="25dp"
        android:paddingEnd="0dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-light"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSignUp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="50dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"/>




</androidx.constraintlayout.widget.ConstraintLayout>