<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/back_black"
    >

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etemail"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="252dp"
        android:drawableStart="@drawable/user"
        android:hint="@string/e_mail"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@drawable/otp_validation"
        android:fontFamily="sans-serif-condensed-light"
        android:textColorHint="@color/white"
        android:padding="5dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="280dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/etemail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/password"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@drawable/otp_validation"
        android:fontFamily="sans-serif-condensed-light"
        android:padding="5dp"
        app:passwordToggleEnabled="true"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSignin"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_login"
        android:textSize="15sp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed-light"
        android:textStyle="bold"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNewtologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btSignin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".42"
        android:text="@string/new_to_track"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-light"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvNewtologin"
        app:layout_constraintTop_toBottomOf="@+id/btSignin"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up"
        android:textColor="@color/skyblue"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="2dp"
        android:fontFamily="sans-serif-condensed-light"
        />

</androidx.constraintlayout.widget.ConstraintLayout>